--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="style/top-nav.css">
     <link rel="stylesheet" href="style/style.css">
 
     <title>Cheaptalks</title>
@@ -19,25 +20,22 @@
 
     <!-- nav start -->
 
-    <nav class="d-flex flex-row ">
-
-        <div class="col w-25 d-flex align-items-center justify-content-center">
-            <img class="nav-logo w-lg-50" src="assets/logo.png" alt="">
+    <section class="top-nav">
+        <div>
+          <img class="nav-logo" src="assets/logo.png" alt="">
         </div>
-        
-        <div class="col w-75 list-div nav-list-group">
-            <ul class="gap-3">
-                <li class="cheaptalks-nav-item">Home</li>
-                <li class="cheaptalks-nav-item">About Us!</li>
-                <li class="cheaptalks-nav-item">Works</li>
-                <li class="cheaptalks-nav-item">Services</li>
-                <li><button class="button-primary cheaptalks-nav-item">Get in Touch</button></li>
-            </ul>
-        </div>
-        <div class="burger-container col w-75 list-div d-flex">
-            
-        </div>
-    </nav>
+        <input id="menu-toggle" type="checkbox" />
+        <label class='menu-button-container' for="menu-toggle">
+        <div class='menu-button'></div>
+      </label>
+        <ul class="menu">
+          <li>One</li>
+          <li>Two</li>
+          <li>Three</li>
+          <li>Four</li>
+          <li>Five</li>
+        </ul>
+      </section>
 
     <!-- nav end -->
 
