updated landing page

--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
     
         <section class="sec-landing" id="home">
 
-            <div class="sec-container d-flex flex-column align-item-center">
+            <div class="sec-container d-flex flex-column justify-content-center align-item-center">
 
-                <div class="col-12 mt-5">
+                <div class="col-12">
 
-                    <h1 class="landing-header">Transform Your Business with</h1>
+                    <h1 class="landing-header">Transform Your Business with</p>
                     <h1 class="landing-header">Cutting-Edge <b class="text-cheap">IT Solutions</b>.</h1>
-                    <h3 class="text-cheap-h4 mt-5"><span class="text-cheap">Cheaptalks</span> is a digital agency that specialize in delivering bespoke</h3>
-                    <h3 class="text-cheap-h4">IT solutions that will revolutionize your business.</h3>
+                    <h4 class="text-cheap-h4 mt-5"><span class="text-cheap">Cheaptalks</span> is a digital agency that specialize in delivering bespoke</h4>
+                    <h4 class="text-cheap-h4">IT solutions that will revolutionize your business.</h4>
                 
                 </div>
 
@@ -76,6 +76,16 @@
                     </div>
 
                 </div>
+
+                <!-- <div class="header-container d-flex align-item-center justify-content-center p-3 gap-5">
+
+                    <video controls>
+                        <source src="movie.mp4" type="video/mp4">
+                        <source src="movie.ogg" type="video/ogg">
+                      Your browser does not support the video tag.
+                      </video>
+
+                </div> -->
 
             </div>
 
