viewport check mobile

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     
         <section class="sec-landing" id="home">
 
-            <div class="sec-container d-flex flex-column justify-content-center align-item-center">
+            <div class="sec-container d-flex flex-column justify-content-center align-item-center mt-sm-5 justify-content-sm-start">
 
                 <div class="col-12">
 
