--- a/get-in-touch.html
+++ b/get-in-touch.html
@@ -59,7 +59,7 @@
 
             <div class="container-fluid btm-animates rounded">
 
-                <img src="/assets/contact.jpg" class="rounded" alt="">
+                <img src="assets/contact.jpg" class="rounded" alt="">
 
             </div>
 
@@ -263,10 +263,10 @@
 
             <div class="container-fluid d-flex col-8 justify-content-lg-start justify-content-center gap-1 py-1 hidden">
 
-                <img class="social-vector hidden" src="/assets/socials/facebook.svg" alt="">
-                <img class="social-vector hidden" src="/assets/socials/discord.svg" alt="">
-                <img class="social-vector hidden" src="/assets/socials/design.svg" alt="">
-                <img class="social-vector hidden" src="/assets/socials/twitter.svg" alt="">
+                <img class="social-vector hidden" src="assets/socials/facebook.svg" alt="">
+                <img class="social-vector hidden" src="assets/socials/discord.svg" alt="">
+                <img class="social-vector hidden" src="assets/socials/design.svg" alt="">
+                <img class="social-vector hidden" src="assets/socials/twitter.svg" alt="">
     
             </div>
 
