button message on read more

--- a/about.html
+++ b/about.html
@@ -104,7 +104,7 @@
         
         <div class="container-fluid d-flex align-content-center justify-content-center">
 
-            <button href="#" class="btn button-primary btn-lg my-3 btn-txt hidden" onclick="myFunction()">Read more</button>
+            <button href="#" class="btn button-primary btn-lg my-3 btn-txt hidden" id="Mek" onclick="myFunction()">Read more</button>
 
         </div>
     </div>
