anchor href update

--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
         <div class="container-fluid col-12 d-flex flex-column justify-content-center align-item-center flex-lg-row p-4">
 
             <div class="container-fluid col-lg-6 text-center">
-                <p class="lead hidden" style="color: #333">Want to learn more? send us a message we will surely listen and provide with expert advice.  <a href="" class="btn button-primary">Get in Touch</a></p>
+                <p class="lead hidden" style="color: #333">Want to learn more? send us a message we will surely listen and provide with expert advice.  <a href="get-in-touch.html" class="btn button-primary">Get in Touch</a></p>
             </div>
 
         </div>
